force-app/main/default/objects/GlobalBypassProcessesSettings__c/GlobalBypassProcessesSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global Bypass Control Panel</description>
    <label>Global Bypass Processes Settings</label>
</CustomObject>