force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunAssignmentsRules__c.field-meta.xml
<CustomField>
    <fullName>RunAssignmentsRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Assignments Rules</label>
    <type>Checkbox</type>
</CustomField>