force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunFlows__c.field-meta.xml
<CustomField>
    <fullName>RunFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Flows</label>
    <type>Checkbox</type>
</CustomField>