force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunProcessBuilderw__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilderw__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>