force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunTriggers__c.field-meta.xml
<CustomField>
    <fullName>RunTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Triggers</label>
    <type>Checkbox</type>
</CustomField>