force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunValidationRules__c.field-meta.xml
<CustomField>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>