force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/RunWorkflowsRules__c.field-meta.xml
<CustomField>
    <fullName>RunWorkflowsRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Workflows Rules</label>
    <type>Checkbox</type>
</CustomField>