force-app/main/default/objects/GlobalBypassProcessesSettings__c/fields/TriggerObjectsBypass__c.field-meta.xml
<CustomField>
    <fullName>TriggerObjectsBypass__c</fullName>
    <label>Trigger Objects Bypass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>